<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/progressView"
        layout="@layout/view_progressbar"
        android:visibility="gone" />

    <include
        android:id="@+id/networkError"
        layout="@layout/view_network_error"
        android:visibility="gone" />

    <include
        android:id="@+id/ServerError"
        layout="@layout/view_server_error"
        android:visibility="gone" />

    <include
        android:id="@+id/empty_view"
        layout="@layout/view_nodata_error"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/item_horizontal_margin"
        android:layout_marginEnd="@dimen/item_horizontal_margin"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="5dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:src="@drawable/github" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/project_name"
            android:paddingBottom="5dp"
            android:textAlignment="center"
            android:textSize="@dimen/project_header1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/project_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/project_description"
            android:textSize="@dimen/project_header2" />


        <TextView
            android:id="@+id/languages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/project_language"
            android:textSize="@dimen/project_text" />

        <TextView
            android:id="@+id/project_watchers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/project_watchers"

            android:textSize="@dimen/project_text" />

        <TextView
            android:id="@+id/project_open_issues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/open_issues"

            android:textSize="@dimen/project_text" />


        <TextView
            android:id="@+id/project_created_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Created At"

            android:textSize="@dimen/project_text" />

        <TextView
            android:id="@+id/project_updated_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Updated At"

            android:textSize="@dimen/project_text" />

        <TextView
            android:id="@+id/clone_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/open_issues"
            android:textSize="@dimen/project_text" />

    </LinearLayout>

</FrameLayout>