<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_horizontal_margin"
        android:layout_marginEnd="@dimen/item_horizontal_margin"
        android:orientation="horizontal"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:orientation="vertical"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/repo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/project_name"
                android:textSize="@dimen/project_text"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/repo_languages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/project_language"
                android:textSize="@dimen/project_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/project_watchers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/project_watchers"
                android:textSize="@dimen/project_text" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>
