<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable name="isLoading" type="boolean" />
        <variable name="noData" type="boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        android:orientation="vertical">

        <include
            android:id="@+id/loading"
            layout="@layout/views_loading"
            bind:loadProgress="@{isLoading}" />

        <include
            android:id="@+id/nodata"
            layout="@layout/views_nodata"

             />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loading_projects"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/loading_projects"
            android:textAlignment="center"
            app:visibleGone="@{isLoading}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            android:orientation="vertical"
            app:visibleGone="@{!isLoading}">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/google_github_projects"
                android:textAlignment="center"
                android:textSize="@dimen/project_header1"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/project_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/project_list"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

    </LinearLayout>
</layout>